<resources>
    <string name="app_name">Media Oasis</string>
    <string name="welcome">Welcome</string>
    <string name="login">Sign In</string>
    <string name="register">Register</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="mobileAppHeader">Mobile App by Jagjeet Reehal (jagree03) 2024</string>
    <string name="mediaOasisLogoContentDescription">The logo of Media Oasis, your ultimate escape into entertainment</string>
    <string name="splashContentDescription">A man at the DVD section in a local shop, searching through content</string>
    <string name="username">Username:</string>
    <string name="usernameHint">Enter username</string>
    <string name="password">Password:</string>
    <string name="passwordHint">*****</string>
    <string name="registrationHeader">Lets get your account ready!</string>
    <string name="firstName">First name:</string>
    <string name="firstNameHint">Enter first name</string>
    <string name="lastName">Last name:</string>
    <string name="lastNameHint">Enter last name</string>
    <string name="email">Email address:</string>
    <string name="emailHint">Enter email</string>
    <string name="phoneNo">Phone no:</string>
    <string name="phoneNoHint">Enter phone number</string>
    <string name="show">Show Password</string>
    <string name="hide">Hide Password</string>
    <string name="menu">Menu</string>
    <string name="itemTitle">Item Title</string>
    <string name="itemPrice">£ 0.00</string>
    <string name="itemDescription">Item Description</string>
    <string name="itemRatingCount">0</string>
    <string name="purchase">Purchase</string>
    <string name="prevButtonContentDescription">Previous Button, Touch to go back to the previous item.</string>
    <string name="nextButtonContentDescription">Next Button, Touch to go to the next item.</string>
    <string name="itemImageContentDescription">This is the image of the item on sale</string>
    <string name="profileSettings">Profile Settings</string>
    <string name="updateInfo">Update Information</string>
    <string name="catalog">Catalog</string>
    <string name="myOrders">My Orders</string>
    <string name="logout">Logout</string>
    <string name="open">Opening navigation drawer</string>
    <string name="close">Closing navigation drawer</string>

    <!-- Placeholder -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zero">0</string>
    <string name="placeholder">placeholder</string>


    <string name="shoppingcart">Shopping Cart</string>
    <string name="shoppingcartContentDescription">Shopping Cart Screen</string>
    <string name="ordertotal">Order Total: £ 0.00</string>
    <string name="checkout">Check out</string>

    <string name="payment">Payment</string>
    <string name="cardContentDescription">Credit or Debit Card</string>
    <string name="paypalContentDescription">Shopping Cart</string>
    <string name="cardholder_name">Cardholder name:</string>
    <string name="cardholder_name_hint">Enter cardholder name</string>
    <string name="card_number">Card number:</string>
    <string name="card_number_hint">Enter card number</string>
    <string name="card_expiration_date">Card expiration date:</string>
    <string name="card_expiration_date_hint">MM/YY</string>
    <string name="card_security_code">Security code (CVV):</string>
    <string name="card_security_code_hint">Enter card CVV</string>
    <string name="save_payment_details">Save payment details</string>
    <string name="pay">Pay</string>

    <string name="orderConfirmed">Order Confirmed.</string>
    <string name="orderConfirmed_Checkmark">A green checkmark image showcasing that the order has been successfully confirmed.</string>
    <string name="orderConfirmed_ReceiveNotifications">You will receive notifications regarding your order.</string>
    <string name="orderConfirmed_CheckStatus">Check the status of your order in View Orders for further updates.</string>
    <string name="goHome">Go home</string>

    <string name="addAReview">Add a review</string>
    <string name="review">Review</string>
    <string name="reviewHint">Enter your review here</string>
    <string name="submit">Submit</string>

    <string name="viewReview">View reviews</string>


    <!-- Admin Panel -->
    <string name="manageSaleItems">Manage Sale Items</string>
    <string name="manageCustomerOrders">Manage Customer Orders</string>
    <string name="manageRegisteredAccounts">Manage Registered Accounts</string>
    <string name="managePaymentRecords">Manage Payment Records</string>
    <string name="manageReviews">Manage Reviews</string>
    <string name="manageAdminProfile">Manage Admin Profile</string>

    <!-- Buttons -->
    <string name="refreshList">Refresh list</string>
    <string name="updateList">Update list</string>
    <string name="removeItem">Remove item</string>
    <string name="addNewItem">Add new item</string>
    <string name="addItem">Add item</string>
    <string name="updateDetails">Update details</string>
    <string name="removeAccount">Remove account</string>
    <string name="updateOrder">Update order</string>
    <string name="cancelOrder">Cancel order</string>
    <string name="removeItemFromOrder">Remove item from order</string>

    <!-- Manage Sale Items -->
    <string name="totalProducts">Total Products: 0</string>
    <string name="productID">Product ID: </string>
    <string name="productName">Product Name:</string>
    <string name="productDescription">Product Description:</string>
    <string name="productPrice">Product Price:</string>
    <string name="productImage">Product Image:</string>
    <string name="productIsAvailable">Is Available?</string>

    <!-- Add new sale item -->
    <string name="addNewSaleItem">Add New Sale Item</string>

    <!-- Manage Registered Accounts -->
    <string name="totalAccounts">Total Accounts: 0</string>
    <string name="accountType">Account Type:</string>
    <string name="accountID">Account ID:</string>
    <string name="accountFirstName">Account First Name:</string>
    <string name="accountLastName">Account Last Name:</string>
    <string name="accountEmailAddress">Account E-mail:</string>
    <string name="accountUsername">Account Username:</string>
    <string name="accountPassword">Account Password:</string>

    <!-- Manage Customer Orders -->
    <string name="totalOrders">Total orders: 0</string>
    <string name="orderID">Order ID:</string>
    <string name="customerID">Customer ID:</string>
    <string name="customerFirstName">Customer First Name:</string>
    <string name="customerLastName">Customer Last Name:</string>
    <string name="orderDate">Order Date:</string>
    <string name="orderTime">Order Time:</string>
    <string name="orderStatus">Order Status:</string>

    <!-- Update An Order (Customer Order) -->
    <string name="updateAnOrder">Update an order</string>
    <string name="orderDetailsID">OrderDetails ID:</string>
    <string name="productQuantity">Product Quantity:</string>
    <string name="productCost">Product Cost:</string>

    <!-- Manage Payment Records -->
    <string name="totalDataRecords">Total data records: 0</string>
    <string name="paymentID">Payment ID:</string>
    <string name="paymentType">Payment Type:</string>
    <string name="paymentDate">Payment Date:</string>
    <string name="paymentAmount">Amount:</string>
    <string name="totalPaidToMediaOasis">Total paid to Media Oasis: £0.00</string>

    <!-- Manage Reviews -->
    <string name="totalReviews">Total reviews: 0</string>
    <string name="reviewID">Review ID:</string>
    <string name="comment">Comment:</string>
    <string name="starRating">Star Rating:</string>
    <string name="isApproved">Is Approved?:</string>

</resources>