<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".RegistrationActivity">

    <ImageView
        android:id="@+id/imageViewMediaOasisLogo"
        android:layout_width="391dp"
        android:layout_height="137dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/mediaOasisLogoContentDescription"
        app:layout_constraintBottom_toTopOf="@+id/textViewRegistrationHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/media_oasis_logo" />

    <TextView
        android:id="@+id/textViewRegistrationHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="33dp"
        android:fontFamily="@font/Frutiger"
        android:text="@string/registrationHeader"
        android:textColor="#F8F5F5"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_RegistrationForm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout_RegistrationForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button_register"
        app:layout_constraintEnd_toStartOf="@+id/button_showhidepassword"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout_FirstNameBox"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewFirstname"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/frutiger"
                android:text="@string/firstName"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/editTextFirstNameInput"
                android:layout_width="180dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:autofillHints="name"
                android:background="@color/editTextBackground"
                android:ems="10"
                android:hint="@string/firstNameHint"
                android:inputType="text"
                android:text=""
                android:textColorHint="@color/editTextHintColour" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_LastNameBox"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewLastname"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/frutiger"
                android:text="@string/lastName"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/editTextLastNameInput"
                android:layout_width="180dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:autofillHints="name"
                android:background="@color/editTextBackground"
                android:ems="10"
                android:hint="@string/lastNameHint"
                android:inputType="text"
                android:text=""
                android:textColorHint="@color/editTextHintColour" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_EmailBox"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/frutiger"
                android:text="@string/email"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/editTextEmailInput"
                android:layout_width="180dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:autofillHints="emailAddress"
                android:background="@color/editTextBackground"
                android:ems="10"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress"
                android:text=""
                android:textColorHint="@color/editTextHintColour" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_PhoneNoBox"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewPhoneNum"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/frutiger"
                android:text="@string/phoneNo"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/editTextPhoneNumInput"
                android:layout_width="180dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:autofillHints="phone"
                android:background="@color/editTextBackground"
                android:ems="10"
                android:hint="@string/phoneNoHint"
                android:inputType="phone"
                android:text=""
                android:textColorHint="@color/editTextHintColour" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_UsernameBox"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewUsername"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/frutiger"
                android:text="@string/username"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/editTextUsernameInput"
                android:layout_width="180dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:autofillHints="username"
                android:background="@color/editTextBackground"
                android:ems="10"
                android:hint="@string/usernameHint"
                android:inputType="text"
                android:text=""
                android:textColorHint="@color/editTextHintColour" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_PasswordBox"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewPassword"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/frutiger"
                android:text="@string/password"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/editTextPasswordInput"
                android:layout_width="180dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:autofillHints="name"
                android:background="@color/editTextBackground"
                android:ems="10"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:text=""
                android:textColorHint="@color/editTextHintColour" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_showhidepassword"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="130dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/frutiger"
        android:text="@string/show"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout_RegistrationForm"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegistrationHeader" />

    <Button
        android:id="@+id/button_register"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="145dp"
        android:layout_marginEnd="146dp"
        android:layout_marginBottom="29dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/frutiger"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>