<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Admin_ManageSaleItemsFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/textViewMenuHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/frutiger_fontfamily"
        android:text="@string/manageSaleItems"
        android:textAlignment="center"
        android:textColor="#F8F5F5"
        android:textSize="28sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="34dp" />

    <ListView
        android:id="@+id/listViewSaleItems"
        android:layout_width="360dp"
        android:layout_height="260dp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="81dp" />

    <TextView
        android:id="@+id/textViewTotalProductsQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/frutiger_fontfamily"
        android:text="@string/totalProducts"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="354dp" />

    <LinearLayout
        android:id="@+id/linearLayoutProductInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="377dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewProductId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/frutiger_fontfamily"
                android:text="@string/productID"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextProductId"
                android:layout_width="86dp"
                android:layout_height="47dp"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/frutiger_fontfamily"
                android:text="@string/productName"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextProductName"
                android:layout_width="86dp"
                android:layout_height="47dp"
                android:ems="10"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="494dp">

            <TextView
                android:id="@+id/textViewProductDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/frutiger_fontfamily"
                android:text="@string/productDescription"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextProductDescription"
                android:layout_width="190dp"
                android:layout_height="47dp"
                android:ems="10"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/frutiger_fontfamily"
                android:text="@string/productPrice"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextProductPrice"
                android:layout_width="86dp"
                android:layout_height="47dp"
                android:ems="10"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewProductImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/frutiger_fontfamily"
                android:text="@string/productImage"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextProductImage"
                android:layout_width="86dp"
                android:layout_height="47dp"
                android:ems="10"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewProductIsAvailable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/frutiger_fontfamily"
                android:text="@string/productIsAvailable"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkBoxIsAvailable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>